--- a/docker/DockerfileWeb
+++ b/docker/DockerfileWeb
@@ -1,8 +1,5 @@
 FROM httpd:2.4
  
-COPY ./public-html/ /usr/local/apache2/htdocs/
-
-
 # Para obtener la config inicial de Apache
 # docker run --rm httpd:2.4 cat /usr/local/apache2/conf/httpd.conf > unix-piloto-mss-r01a-id-httpd.conf
 # Cambios a la config de Apache
@@ -13,6 +10,10 @@ COPY ./public-html/ /usr/local/apache2/htdocs/
 # 	ProxyPassReverse "/api"  "http://unix-piloto-mss-r01a-id-api:8080/api/"
 # </IfModule>
 
-COPY ./unix-piloto-mss-r01a-id-httpd.conf /usr/local/apache2/conf/httpd.conf
+ARG TARGZ_FILE=nexus/*.tar.gz
+COPY ${TARGZ_FILE} /usr/local/apache2/htdocs/site.tar.gz
+RUN cd /usr/local/apache2/htdocs && tar -xvzf site.tar.gz && rm site.tar.gz
+
+COPY resources/web/unix-piloto-mss-r01a-id-httpd.conf /usr/local/apache2/conf/httpd.conf
 
 
